# TengeNews

./: Links.py  NEWS.db  News.py  README.md  main.py  news.py  newsDB.py  pyproject.toml  requirements.txt  views.py
static/: styles.css
templates/: index.html  search.html  single_page.html
