[tool.poetry]
name = "tengenews-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
fastapi = ">=0.110.1,<0.111.0"
requests = ">=2.31.0,<2.32.0"
beautifulsoup4 = ">=4.12.3,<4.13.0"
sqlalchemy = ">=2.0.29,<2.1.0"
pydantic = ">=2.6.4,<2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
